# Axolotl

./: .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  EXTENSION_IMPROVEMENTS.md  README.md  build.sh  package-lock.json  package.json  run_tests.sh
examples/: all_tests.axo  any_test.axo  arrays.axo  bad_array.axo  benchmark_fib.axo  benchmark_loop.axo  benchmark_loop.js  comprehensive_test.axo  counter_test.axo  deep_typing_test.axo  enum_test.axo  error_cases.axo  fibonacci.axo  functions.axo  invalid_access.axo  jit_test.axo  logic.axo  math.axo  object_access.axo  objects_guide.axo  showcase.axo  simple_loop.axo  strings.axo  test.axo  try_catch_test.axo  typeof_test.axo  typeof_test_enhanced.axo  union_test.axo  union_types_simple.axo  union_types_test.axo
include/: ast.h  error_handler.h  interpreter.h  jit.h  lexer.h  operators.h  parser.h  token.h
lang-ext/: README.md  README_ENHANCED.md  axo-syntax-1.0.0.vsix  axo-syntax-1.1.0.vsix  extension.js  file-icons.json  lang-syntax-1.0.0.vsix  language-configuration.json  launch.json  package.json  tasks.json  tsconfig.json
lang-ext/snippets/: axo.json
lang-ext/syntaxes/: axo.tmLanguage.json
src/: ast.cpp  error_handler.cpp  interpreter.cpp  jit.cpp  lexer.cpp  main.cpp  operators.cpp  parser.cpp  token.cpp
tests/: assign_test.axo  builtin_functions_test.axo  chaining_test.axo  config.json  custom_types_test.axo  debug_assign.axo  debug_expr.axo  debug_full.axo  debug_multi.axo  debug_simple.axo  debug_template.axo  debug_template2.axo  debug_value.axo  dollar_escape.axo  exact_test.axo  export_examples.axo  expr_test.axo  extreme_test.axo  fetch.axo  fetch_demo.axo  fetch_program.axo  import_export_test.axo  import_test.axo  intellisense_demo.axo  json.axo  minimal.axo  nested_test.axo  program_test.axo  server.axo  simple_array_test.axo  simple_export_test.axo  simple_template.axo  string_test.axo  strings.axo  switch_test.axo  test_add.axo  test_dollar.axo  test_expr.axo  test_mult.axo  test_space.axo  (+4 more)
